@startuml Sources_ClassDiagram

' interfaces
interface ITelemetrySource {
    +{abstract} openSource() : bool
    +{abstract} readSource(out: std::string&) : bool
}

' rule of 5 classes
class SafeFile {
    -fd_ : int
    +SafeFile(filePath: const std::string)
    +fileReadLine() : std::string
    +fileReadLastLine() : std::string
    +fileWrite(msg: const std::string&) : void
    +isOpen() : bool
}

class SafeSocket {
    -fd_ : int
    -socketPath_ : std::string
    +SafeSocket(socketPath: const std::string&)
    +receiveSocket() : std::string
    +isOpen() : bool
}

' Implementations (RAII Classes)
class FileTelemetrySourceImpl {
    -filePath_ : std::string
    -file_ : std::unique_ptr<SafeFile>
    +FileTelemetrySourceImpl(filePath: const std::string)
    +openSource() : bool
    +readSource(out: std::string&) : bool
}

class SocketTelemetrySourceImpl {
    -socketPath_ : std::string
    -socket_ : std::unique_ptr<SafeSocket>
    +SocketTelemetrySourceImpl(socketPath: const std::string&)
    +openSource() : bool
    +readSource(out: std::string&) : bool
}

' Singleton + Adapter Implementation
class SomeIPTelemetrySourceImpl <<Singleton>> <<Adapter>> {
    -proxy_ : std::shared_ptr<GpuUsageDataProxy<>>
    -isAvailable_ : std::atomic<bool>
    -lastGpuReading_ : std::atomic<float>
    -SomeIPTelemetrySourceImpl()
    +openSource() : bool
    +readSource(out: std::string&) : bool
    +{static} getInstance() : SomeIPTelemetrySourceImpl&

}

' External Proxy class
class "v1::logarbiter::gpu::GpuUsageDataProxy<>" as GpuUsageDataProxy <<generated>> {
}

' Relationships
ITelemetrySource <|.. FileTelemetrySourceImpl : implements
ITelemetrySource <|.. SocketTelemetrySourceImpl : implements
ITelemetrySource <|.. SomeIPTelemetrySourceImpl : implements

FileTelemetrySourceImpl o-- SafeFile : contains
SocketTelemetrySourceImpl o-- SafeSocket : contains
SomeIPTelemetrySourceImpl o-- GpuUsageDataProxy : contains

@enduml